fix float notifications not showing

--- a/authors.css
+++ b/authors.css
@@ -217,7 +217,7 @@ main{
   padding: 0.2rem 0.8rem;
   -webkit-animation: slide-in 0.2s ease-in forwards, fade-out 0.5s ease 0.9s forwards;
           animation: slide-in 0.2s ease-in forwards, fade-out 0.5s ease 0.9s forwards;
-  position: absolute;
+  position: fixed;
   left: 50%;
   top: -10rem;
   transform: translateX(-50%);
@@ -227,7 +227,16 @@ main{
 .light .mode-info {
   background: aliceblue;
 }
-
+@keyframes slide-in {
+  to {
+    top: 2rem;
+  }
+}
+@keyframes fade-out {
+  to {
+    opacity: 0;
+  }
+}
 a{
     text-decoration: none; color: inherit;
 }
